--- a/app/src/main/res/layout/article_challenges_activity.xml
+++ b/app/src/main/res/layout/article_challenges_activity.xml
@@ -138,8 +138,8 @@
     android:layout_above="@+id/bottomLayout"
     android:layout_below="@+id/suggestedTopicsTextView"
     android:background="@color/white_color"
-    android:paddingStart="@dimen/space_15"
-    android:paddingEnd="@dimen/space_15" />
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp" />
 
   <RelativeLayout
     android:id="@+id/bottomLayout"
