--- a/app/src/main/res/layout/follower_following_list_item.xml
+++ b/app/src/main/res/layout/follower_following_list_item.xml
@@ -23,11 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
         android:layout_toEndOf="@+id/authorImageView"
-        android:layout_toLeftOf="@+id/followingTextView"
-        android:layout_toRightOf="@+id/authorImageView"
         android:layout_toStartOf="@+id/followingTextView"
         android:background="@color/white_color"
         android:gravity="center_vertical"
@@ -41,10 +38,8 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
         android:background="@drawable/follow_topic_author_bg"
         android:gravity="center"
         android:paddingBottom="10dp"
@@ -61,10 +56,8 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
         android:background="@drawable/follow_topic_author_bg"
         android:foregroundGravity="center"
         android:gravity="center"
@@ -82,17 +75,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/followTextView"
-        android:layout_alignRight="@+id/followTextView"
         android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/authorNameTextView"
-        android:layout_toRightOf="@+id/authorNameTextView"
         android:visibility="gone">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imgLoader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/sepaartorView"
             android:layout_centerInParent="true"
             android:src="@drawable/progress_spinner" />
     </RelativeLayout>
