--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -584,4 +584,6 @@
   <color name="suggested_topic_border_3">#EDE0F9</color>
   <color name="suggested_topic_border_4">#DBE9FA</color>
   <color name="suggested_topic_border_5">#F6E9D5</color>
+
+  <color name="color_9D9D9D">#9D9D9D</color>
 </resources>
