only like remaining in commnets

--- a/app/src/main/res/layout/article_details_fragment.xml
+++ b/app/src/main/res/layout/article_details_fragment.xml
@@ -963,7 +963,7 @@
         <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/likeTextView"
           android:layout_width="20dp"
-          android:layout_height="20dp"
+          android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:layout_marginStart="20dp"
           android:tint="@color/app_red"
