--- a/app/src/main/res/layout/dialog_expecting_mom.xml
+++ b/app/src/main/res/layout/dialog_expecting_mom.xml
@@ -35,7 +35,7 @@
       android:layout_marginStart="4dp"
       android:layout_marginTop="12dp"
       android:layout_marginEnd="4dp"
-      android:text="FEFE  f eFEF  FEF E FE FEF EF EF EF EF"
+      android:text="@string/virtual_clinic_popup_header"
       android:textColor="@color/app_dark_black"
       android:textSize="18sp"
       android:textStyle="bold" />
@@ -46,7 +46,7 @@
       android:layout_marginStart="4dp"
       android:layout_marginTop="14dp"
       android:layout_marginEnd="4dp"
-      android:text="Expecting date of delivery"
+      android:text="@string/expected_mom_popup_msg"
       android:textColor="#9D9D9D"
       android:textSize="18sp" />
 
